ml2_zones: use correct hostname

--- a/ml2_zones.conf
+++ b/ml2_zones.conf
@@ -1,6 +1,6 @@
 [
   {
-    "host":"grindelwald",
+    "host":"allinone",
     "port":"port1",
     "zone":1,
     "vlan":101,
@@ -8,7 +8,7 @@
     "used":["2003:0:1::1","2003:0:1::2"]
   },
   {
-    "host":"grindelwald",
+    "host":"allinone",
     "port":"port1",
     "zone":2,
     "vlan":102,
@@ -16,7 +16,7 @@
     "used":["2003:0:2::1","2003:0:2::2"]
   },
   {
-    "host":"grindelwald",
+    "host":"allinone",
     "port":"port1",
     "zone":3,
     "vlan":103,
@@ -24,7 +24,7 @@
     "used":["2003:0:3::1","2003:0:3::2"]
   },
   {
-    "host":"grindelwald",
+    "host":"allinone",
     "port":"port1",
     "zone":4,
     "vlan":104,
@@ -32,7 +32,7 @@
     "used":["2003:0:4::1","2003:0:4::2"]
   },
   {
-    "host":"grindelwald",
+    "host":"allinone",
     "port":"port1",
     "zone":64,
     "vlan":64,
@@ -40,4 +40,3 @@
     "used":["10.64.0.1","10.64.0.2"]
   }
 ]
-
